# Notas_Musicais

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yaml
docs/: 01_tutorial.md  02_contribua.md  index.md
docs/api/: acordes.md  campo_harmonico.md  escalas.md
docs/stylesheets/: extra.css
docs/templates/: cards.html  instalacao.md
notas_musicais/: acordes.py  campo_harmonico.py  cli.py  escalas.py
tests/: test_acordes.py  test_cli.py  test_escalas.py
