[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = "Notas musicais é um CLI para ajudar na formação de escalas, acordes e campos harmônicos"
license = "MIT"
authors = ["Lyarkh <lcemanuel.emanuel@gmail.com>"]
readme = "README.md"
packages = [{include = "notas_musicais"}]
classifiers = [
    "Topic :: Education",
    "Environment :: Console",
    "Natural Language :: Portuguese (Brazilian)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.urls]
"Documentação" = "https://notas-musicais.readthedocs.io/en/latest/"
"Código" = "https://github.com/Lyarkh/Notas_Musicais"
"Bug Tracker" = "https://github.com/Lyarkh/Notas_Musicais/issues"

[tool.poetry.scripts]
notas-musicais = "notas_musicais.cli:app"


[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.4"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.5"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
mkdocs-macros-plugin = "^1.0.1"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=notas_musicais -vv"
post_test = "coverage html"